--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -5,10 +5,11 @@
      <%= f.select :weight, [["25g以下", "25"], ["50g以下", "50"], ["100g以下", "100"], ["150g以下", "150"]], include_blank: "選択して下さい" %>
    </p> 
    <p>厚み
-     <%= f.select :thickness, [["1cm以下", "1"], ["経済学部", "経済学部"], ["法学部", "法学部"], ["医学部", "医学部"]], include_blank: "選択して下さい" %>
+     <%= f.select :thickness, [["ごく薄い", "0"],["1cm以下", "1"], ["2cm以下", "2"], ["3cm以下", "3"], ["4cm以下", "4"]], include_blank: "選択して下さい" %>
    </p> 
    <p>大きさ   
-     <%= f.select :size, [["A4はがきサイズ以下", "1"], ["経済学部", "経済学部"], ["法学部", "法学部"], ["医学部", "医学部"]], include_blank: "選択して下さい" %>
+     <%= f.select :size, [["はがきサイズ以下", "1"], ["定形内サイズ以下
+", "2"], ["A5サイズ以下", "3"], ["A4（定形外かつ規格内）サイズ以下", "4"], ["60サイズ以下", "5"]], include_blank: "選択して下さい" %>
    </p> 
-     <%= f.submit '送信'%>
+     <%= f.submit '計算'%>
   <% end %>
